assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Maitree:wght@200;500&family=Prompt:wght@200;300;400;500;600&family=Rokkitt:wght@100&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

/* Generic Elements Styling */
header {
    background-color: #f5a8e4;
    height: 100px;
    width: 100%;
    color: #120e11;
}

body,
input {
    font-family: 'Maitree', serif;
    font-weight: 200;
    color: #120e11;
}

h1 {
    font-family: 'Prompt', sans-serif;
    font-weight: 300;
    font-size: 200%;
    letter-spacing: 6px;
}

h2,
nav {
    font-family: 'Prompt', sans-serif;
    font-weight: 200;
}

/* Contrast h2 for headings with blurred background behind. */
.contrast-h2 {
    line-height: 90px;
    font-size: 200%;
    letter-spacing: 4px;
    text-align: center;
    color: white;
    text-shadow: 1px 1px black;
}

h3 {
    font-family: 'Dancing Script', cursive;
    font-weight: 100;
    color: #120e11;
}

/* Postion nav element absolute */
nav {
    position: absolute;
    top: 10px;
    right: 20px;
}

#logo-and-title {
    float: left;
    width: 50%;
    line-height: 35px;
    margin-top: 2vmin;
}

#logo {
    float: left;
    height: 60px;
    padding: 0 2vmin;
}

#menu {
    line-height: 75px;
}

#menu li {
    font-size: 1.2em;
    display: inline-block;
    margin-right: 40px;
    list-style-type: none;
}


#menu a {
    text-decoration: none;
    color: inherit;
}

/* Responsive styling for menu items */
#menu a:hover {
    border-bottom: 1px solid #313e47;
    opacity: 0.6;
}

/* Shadow effect for hyperlink of current page. */
.active {
    font-weight: 400;
    text-shadow: 0.5px 0.5px lightgray;
}

/* style home page hero image */

#hero-outer {
    height: 400px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 100%;
    width: 100%;
    background: url('../images/hero-image.jpg') no-repeat center center;
    background-size: cover;
    animation-name: hero-zoom;
    animation-duration: 3s;
    animation-fill-mode: forwards;
}

/* animation for hero image */
@keyframes hero-zoom {
    from {
        transform: scale(1)
    }

    to {
        transform: scale(1.1);
    }
}

#sign-up-circle {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    text-align: center;
    font-size: 0.9em;
    background-color: #b8d3d0;
    bottom: 2vmin;
    right: 6vmin;
    position: absolute;
    border: 2px solid #313e47;
    opacity: 0;
    animation: 1s ease-out 3s forwards sign-up-circle-appear;
    /* animation shorthand for sign up circle. The forwards attribute ensures that the element retains properties assigned as part of animation.*/
}

/* Animation for sign-up-circle */
@keyframes sign-up-circle-appear {
    from {
        opacity: 0;
    }

    to {
        opacity: 0.9
    }
}

#sign-up-circle:hover {
    font-weight: 500;
    width: 151px;
    height: 151px;
    border: 3px solid grey;
    cursor: pointer;

}

#sign-up-text {
    margin: 10px;
    padding-top: 20px;
}

/* Style home page sections */

.info-section {
    width: 100%;
    height: 450px;
    margin-top: 20px;
    text-align: center;
}

.info-section h2 {
    margin-bottom: 20px;
    line-height: 75px;
    font-size: 200%;
    letter-spacing: 4px;
}

.info-container {
    width: 50%;
    height: 77%;
    background-color: #b8d3d0;
    border-radius: 20px;
    float: left;
    margin-left: 7.5%;
    position: relative;
}

.info-container p {
    position: absolute;
    margin: 0 5%;
    top: 50%;
    transform: translateY(-50%);
    font-size: 120%;
    text-align: justify;

}

.info-images {
    aspect-ratio: 1 / 1;
    height: 72%;
    object-fit: cover;
    margin-right: 7.5%;
    border-radius: 50%;
    float: right;
    border: 10px solid #b8d3d0
}

#info-section-middle {
    background-image: url('../images/balls-of-yarn.jpg');
    background-size: cover;
    background-attachment: fixed;
}

#info-image-middle {
    aspect-ratio: 1 / 1;
    height: 72%;
    object-fit: cover;
    margin-left: 7.5%;
    margin-right: 2%;
    border-radius: 50%;
    float: left;
    border: 10px solid #b8d3d0
}

#info-container-middle {
    width: 50%;
    height: 77%;
    background-color: #b8d3d0;
    border-radius: 20px;
    float: right;
    margin-right: 7.5%;
    position: relative;
}

#info-container-middle ul {
    position: absolute;
    width: 90%;
    margin: 0 5%;
    top: 50%;
    transform: translateY(-50%);
}

#info-container-middle i {
    margin: 0 10px;
}

#info-container-middle li {
    text-align: left;
    padding-left: 20px;
    text-indent: -20px;
    margin: 0 auto;
    font-size: 120%;
    list-style-type: none;
    line-height: 45px;
}

#info-section-bottom {
    width: 100%;
    height: 425px;
    margin: 20px 0 75px 0;
    text-align: center;
}

#info-section-bottom h2 {
    margin-bottom: 20px;
    line-height: 75px;
    font-size: 200%;
}

/* Style page footer section */
footer {
    position: fixed;
    bottom: 0;
    height: 7vmin;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: #f5a8e4;
    color: #313e47;
    text-align: center;
    overflow: hidden;
}

.social-networks>li {
    display: inline;
}

.social-networks i {
    font-size: 160%;
    margin: 15px 3.5% 0 1.5%;
    color: #120e11;
}

.social-networks i:hover {
    color: rgba(0, 0, 0, 0.3);
}

/* Styling for Get Started page. */

.intro-section {
    height: 550px;
    width: 100%;
    background-image: url('../images/balls-of-yarn.jpg');
    background-size: cover;
    background-attachment: fixed;
    position: relative;

}

/* Use backdrop-filter with a blur effect for specific section backgrounds */
.blur {
    backdrop-filter: blur(4px);
    height: 100%;
}

.intro-section span {
    font-weight: bold;
}

.tuition-sections {
    height: 650px;
    width: 100%;
}

.tuition-sections h2 {
    text-align: center;
    line-height: 90px;
    font-size: 200%;
    letter-spacing: 4px;
}
/* ... */

